Punto 7 agregado al informe

--- a/Informe/Informe.tex
+++ b/Informe/Informe.tex
@@ -42,6 +42,6 @@
 	\input{../Ejercicio-6/Ejercicio-6.tex}
 \newpage
 \section{Ejercicio 7}
-%	\input{../Ejercicio-7/Ejercicio-7.tex}
+	\input{../Ejercicio-7/Ejercicio-7.tex}
 
 \end{document}
