pequeño cambio en ej 7

--- a/Ejercicio-7/Ejercicio 7.tex
+++ b/Ejercicio-7/Ejercicio 7.tex
@@ -78,7 +78,8 @@
 				|- ++ (5.5, 0.6)
 				-| (feedback1.center)
 				
-			(enable) to[short, -o] ++ (-1.5, 0)
+			(enable) to[short] ++ (-0.5, 0)
+				to[twoport, l=$Edge Det$, -o] ++ (-2, 0)
 				node[label=west:$CLK$]{}
 	
 		;
