Agregué ejercicico 4 el informe final

--- a/Informe/Informe.tex
+++ b/Informe/Informe.tex
@@ -31,16 +31,16 @@
 \section{Ejercicio 3}
 	\label{Ejercicio-3}
 	\input{../Ejercicio-3/Ejercicio-3.tex}
-\newpage
+	
 \section{Ejercicio 4}
-%	\input{../Ejercicio-4/Ejercicio-4.tex}
-\newpage	
+	\input{../Ejercicio-4/Ejercicio-4.tex}
+	
 \section{Ejercicio 5}
 	\input{../Ejercicio-5/Ejercicio-5.tex}
-\newpage
+	
 \section{Ejercicio 6}
 	\input{../Ejercicio-6/Ejercicio-6.tex}
-\newpage
+	
 \section{Ejercicio 7}
 	\input{../Ejercicio-7/Ejercicio-7.tex}
 
