--- a/Ejercicio-3/Ejercicio-3.tex
+++ b/Ejercicio-3/Ejercicio-3.tex
@@ -85,7 +85,7 @@ Se analiza el caso en el cual $a = 0$ y $b = c = 1$, siendo entonces $Y = 1$. Si
 \end{center}
 \end{figure}
 
-Es posible detectar un un error potencial observando el mapa de Karnaugh, ya que en cualquier lugar que se encuentre un par de 1s adyacentes que no sean cubiertos por un grupo de minterminos, puede existir un error como el mencionado (de la misma forma ocurre con los 0s y los maxterminos). Por lo tanto, agregando algún nuevo conjunto que incluya dicho par adyacente, se evita que exista un error de transición ya que dicho conjunto se encuentra incluido en un grupo\footnote{S. Brown and Z. Vranesic, Fundamentals of digital logic with verilog design, 3er ed. New York: McGraw-Hill, 2002.}.
+Es posible detectar un un error potencial observando el mapa de Karnaugh, ya que en cualquier lugar que se encuentre un par de 1s adyacentes que no sean cubiertos por un grupo de minterminos, puede existir un error como el mencionado (de la misma forma ocurre con los 0s y los maxterminos). Por lo tanto, agregando algún nuevo conjunto que incluya dicho par adyacente, se evita que exista un error de transición ya que dicho conjunto se encuentra incluido en un grupo.\footnote{S. Brown and Z. Vranesic, Fundamentals of digital logic with verilog design, 3er ed. New York: McGraw-Hill, 2002.}
 
 Por lo tanto, considerando todo lo dicho se evalúa nuevamente el mapa de Karnaugh de la Tabla (\ref{tabla:verdad}), pero esta vez tomando un grupo adicional, representado en rojo:
 \begin{figure}[H]
