--- a/Informe/Informe.tex
+++ b/Informe/Informe.tex
@@ -22,6 +22,7 @@
 %%%%%%%%%%%%%%%%%%%%%
 
 \section{Ejercicio 1}
+	\label{Ejercicio-1}
 	\input{../Ejercicio-1/Ejercicio-1.tex}
 		
 \section{Ejercicio 2}
