--- a/InformeConMake/Informe.tex
+++ b/InformeConMake/Informe.tex
@@ -22,26 +22,27 @@
 %%%%%%%%%%%%%%%%%%%%%
 
 \section{Ejercicio 1}
-	\input{Ejercicio-1.tex}
+	\label{Ejercicio-1}
+	\input{../Ejercicio-1/Ejercicio-1.tex}
 		
 \section{Ejercicio 2}
 	\label{Ejercicio-2}
-	\input{Ejercicio-2.tex}
+	\input{../Ejercicio-2/Ejercicio-2.tex}
 	
 \section{Ejercicio 3}
 	\label{Ejercicio-3}
-	\input{Ejercicio-3.tex}
-\newpage
+	\input{../Ejercicio-3/Ejercicio-3.tex}
+	
 \section{Ejercicio 4}
-	\input{Ejercicio-4.tex}
-\newpage	
+	\input{../Ejercicio-4/Ejercicio-4.tex}
+	
 \section{Ejercicio 5}
-	\input{Ejercicio-5.tex}
-\newpage
+	\input{../Ejercicio-5/Ejercicio-5.tex}
+	
 \section{Ejercicio 6}
-	\input{Ejercicio-6.tex}
-\newpage
+	\input{../Ejercicio-6/Ejercicio-6.tex}
+	
 \section{Ejercicio 7}
-	\input{Ejercicio-7.tex}
+	\input{../Ejercicio-7/Ejercicio-7.tex}
 
 \end{document}
