cambio pequeño en 7

--- a/Ejercicio-7/Ejercicio 7.tex
+++ b/Ejercicio-7/Ejercicio 7.tex
@@ -472,6 +472,6 @@ $$tp_{jk}=81ns$$
 $$tp_{async}=196ns$$
 $$tp_{sync}=94ns$$
 
-Por lo que la máxima velocidad de operación será de $5MHz$.
+Por lo que la máxima velocidad de operación será de $5MHz$ para el contador asíncrono, $\approx 10 MHz$ para el contador síncrono, lo cual es cercano a los $16MHz$ que el fabricante propone como máxima velocidad de operación para un solo JK flip-floop.
 
 \end{document}
